# bore-tunnel-gui

./: .gitignore  LICENSE  README.md  index.html  package.json
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bore.rs  commands.rs  config.rs  main.rs
src/lib/: api.ts  types.ts
