[package]
name = "bore-minecraft-tunnel"
version = "1.0.0"
description = "A Windows app that runs Bore to expose a local Minecraft Java server"
authors = ["bore-minecraft-tunnel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
tauri = { version = "2", features = [] }
dirs = "6"
keyring = "3"
thiserror = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["serde"] }
